more comments and documentation

--- a/4. Mock Lambda Function.ipynb
+++ b/4. Mock Lambda Function.ipynb
@@ -47,7 +47,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Amazon lambda function can access environment variable.  Let's make the Sagemaker Endpoint a configurable option."
+    "Amazon lambda functions can access os environment variable.  Let's make the Sagemaker Endpoint a configurable option."
    ]
   },
   {
@@ -58,6 +58,25 @@
    "source": [
     "import os \n",
     "os.environ['ENDPOINT'] = 'ntm-nyt'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Lambda Function\n",
+    "\n",
+    "The is an example script that could be deployed as a lambda function.  \n",
+    "\n",
+    "The function:\n",
+    "1. Loads a vocabuarly as a dictionary\n",
+    "2. Tokenizes the comments\n",
+    "3. Coverts the tokens to indexes \n",
+    "4. Counts the words (i.e. creates the bag-of-words)\n",
+    "5. Represents the bag-of-words as a sparse vector\n",
+    "6. Call the NTM endpoint and gets the response.\n",
+    "\n",
+    "> Note: This function needs to tokenize the sentence exactly like the data prep.  It might make sense to create a tokenization micro-service that is use by this function and the data prep."
    ]
   },
   {
@@ -109,6 +128,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Call the Mock Function\n",
+    "\n",
+    "The call to SageMaker is in a json format and looks like this...\n",
+    "\n",
+    "```\n",
+    "{\n",
+    "    \"instances\": \n",
+    "        [\n",
+    "            {\"data\": \n",
+    "                {\n",
+    "                \"features\": \n",
+    "                    {\n",
+    "                    \"keys\": [words], \n",
+    "                    \"shape\": [5000], \n",
+    "                    \"values\": [counts]\n",
+    "                     }\n",
+    "                 }\n",
+    "             }\n",
+    "         ]    \n",
+    "}\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -123,6 +169,13 @@
    ],
    "source": [
     "response = mock_function(test_event, test_context)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The response is an array of topic probabilities.   The most likely topic is the gun topic."
    ]
   },
   {
