--- a/1. Dataset Upload.ipynb
+++ b/1. Dataset Upload.ipynb
@@ -4,9 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Downlaod the dataset\n",
+    "# Downlaod the NY Times Comments Dataset\n",
     "\n",
-    "Create an API from the [NY Times](http://developer.nytimes.com/signup)"
+    "![Kaggle NY Times](images/KaggleDataset.png)\n",
+    "\n",
+    "[From Kaggle Website](https://www.kaggle.com/aashita/nyt-comments/data) to progamaticaly...\n"
    ]
   },
   {
